--- a/ninjachat.css
+++ b/ninjachat.css
@@ -1,12 +1,7 @@
 @import url("https://infinity.500apps.com/fonts/feather/feather.css?v=infinity_release_tag");
-/*body {
-  font-family: Arial, Helvetica, sans-serif;
-}*/
-/* The Modal (background) */
 .ninjachat .ninjachat-modal {
   display: none; /* Hidden by default */
-  position: absolute;
-  /* Stay in place */
+  position: fixed; /* Stay in place */
   /* Sit on top */
   padding-top: 50px; /* Location of the box */
   left: 0;
@@ -160,7 +155,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 80px !important;
 }
 .mobile-chat-widget .ninjachat-footer-section .ninjachat-text-area-icons {
   height: 90px !important;
@@ -170,7 +164,7 @@
   padding: 0px 50px 0px 0px;
   width: 100%;
   height: 100%;
-  font-family: "Poppins", sans-serif;
+  font-family: inherit !important;
   font-size: 14px;
   font-weight: normal;
   line-height: 1.33;
@@ -224,6 +218,7 @@ button {
 }
 .cleanslate .ninjachat .ninjachat-footer-icons {
   width: 100% !important;
+  height: unset !important;
 }
 .ninjachat .chat-body-height::-webkit-scrollbar {
   width: 5px;
@@ -243,13 +238,12 @@ button {
 }
 .cleanslate .ninjachat .ninjachat-footer-icons {
   display: inline !important;
-  height: 80px !important;
 }
 .cleanslate .ninjachat .margin-zero {
   word-break: break-word !important;
 }
 .cleanslate .ninjachat .ninjachat-send-img {
-  bottom: 40px !important;
+  bottom: -1px !important;
   width: 22px !important;
   height: 22px !important;
   right: 15px !important;
@@ -257,6 +251,11 @@ button {
 .cleanslate .message-text.text-break .ptag {
   word-break: break-word !important;
   font-size: 13px !important;
+}
+.cleanslate .message-text.text-break .ptag {
+  word-break: break-word !important;
+  font-size: 13px !important;
+  word-spacing: normal !important;
 }
 .cleanslate ol,
 .cleanslate ul {
@@ -285,18 +284,17 @@ button {
   right: 20px !important;
 }
 .ninjachat-footer-section .ql-toolbar.ql-snow .ql-formats {
-  margin-left: 10px !important;
+  margin-left: 5px !important;
+}
+.cleanslate .ninjachat-footer-section .ql-list {
+  padding-left: 2px !important;
+  padding-right: 0px !important;
 }
 .cleanslate .ninjachat .ql-toolbar.ql-snow + .ql-container.ql-snow {
   border: unset;
   margin-top: 18px;
-  margin-left: -12px !important;
-}
-.flex-column-reverse {
-  width: 320px;
 }
 .ninjachat-footer-section .flex-column-reverse {
-  padding: 8px 15px !important;
   border-top: 1px solid #e9e9f1 !important;
 }
 .ninjachat-footer-section {
@@ -344,35 +342,21 @@ button {
 .ninjachat-footer-section .ql-toolbar.ql-snow .ql-formats .ql-picker {
   top: 4px;
 }
-.cleanslate .ninjachat-footer-section .ql-editor {
-  max-height: 39px !important;
-  min-height: 39px !important;
-  padding-top: 8px !important;
-  width: 290px;
-  background-color: transparent !important;
-  padding-left: 0px !important;
-  padding-bottom: 0px !important;
-  margin-bottom: 0px !important;
+.cleanslate .ninjachat .ql-editor {
+  padding-bottom: 8px !important;
+  margin-bottom: 8px !important;
+  padding-top: 15px !important;
 }
 .cleanslate .ninjachat-footer-section .ql-editor p span {
   color: #000 !important;
-  font-size: 12px !important;
+  font-size: 13px !important;
 }
 .cleanslate .ninjachat-footer-section .ql-container {
-  min-height: unset !important;
-  max-height: 35px;
-  overflow: hidden !important;
+  min-height: 45px !important;
+  max-height: 100px !important;
+  overflow: auto;
+  padding: 4px 5px 4px 0px !important;
   font-family: inherit !important;
-}
-.ninjachat-footer-section .ql-snow.ql-toolbar button svg,
-.ql-snow .ql-toolbar button svg {
-  width: 15px;
-  height: 15px;
-}
-.ninjachat-footer-section .ql-snow .ql-color-picker .ql-picker-label svg,
-.ql-snow .ql-icon-picker .ql-picker-label svg {
-  width: 15px;
-  height: 15px;
 }
 .cleanslate .ql-editor li:not(.ql-direction-rtl):before {
   margin-left: 0.3em !important;
@@ -386,14 +370,14 @@ button {
 .margin-zero p {
   margin: 0;
 }
-.cleanslate .ql-editor::-webkit-scrollbar {
-  width: 3px;
+.cleanslate .ql-container::-webkit-scrollbar {
+  width: 5px;
 }
-.cleanslate .ql-editor::-webkit-scrollbar-thumb {
+.cleanslate .ql-container::-webkit-scrollbar-thumb {
   background: #d2d2d2;
   border-radius: 5px;
 }
-.cleanslate .ql-editor::-webkit-scrollbar-track {
+.cleanslate .ql-container::-webkit-scrollbar-track {
   box-shadow: inset 20px 20px 20px #fff;
   border-radius: 0px;
 }
@@ -428,14 +412,22 @@ button {
   box-shadow: 0 0 0 0.2rem rgb(130 138 145 / 0%) !important;
 }
 .textarea-emoji-control:hover .ql-stroke {
-  stroke: #06c !important;
+  stroke: #1b17cf !important;
 }
 .textarea-emoji-control:hover .ql-fill {
-  fill: #06c !important;
+  fill: #1b17cf !important;
+}
+.cleanslate .ql-snow.ql-toolbar button:hover {
+  color: #1b17cf !important;
+  stroke: #1b17cf !important;
+}
+.cleanslate .ql-snow.ql-toolbar button:hover .ql-stroke {
+  color: #1b17cf !important;
+  stroke: #1b17cf !important;
 }
 .ninjachat-footer-section .ql-snow.ql-toolbar button,
 .ql-snow .ql-toolbar button {
-  width: 30px;
+  width: 24px;
 }
 /* Animation effects */
 .ninjachat-animation-bounce-enter-active {
@@ -640,7 +632,7 @@ button {
   bottom: 0px !important;
 }
 .mobile-chat-widget .mobile-footer {
-  position: absolute;
+  position: fixed;
   width: 100%;
   bottom: 0px;
 }
@@ -712,7 +704,6 @@ button {
 .cleanslate .main-content .ninjachat-chat .ninjachat-widget-close .ninjachat-close-icon {
   width: 13px !important;
   height: 13px !important;
-  /* top: 25px !important; */
   opacity: 0.75;
 }
 .cleanslate .main-content .ninjachat-chat .ninjachat-widget-close .ninjachat-close-icon:hover {
@@ -720,56 +711,91 @@ button {
 }
 .cleanslate .ninjachat-chat .form-border {
   border: 1px solid #f1f1f1 !important;
-  margin-bottom: 8px !important;
   padding: 8px !important;
-  width: 93%;
+  width: 93% !important;
   border-radius: 4px !important;
-  margin-top: 5px !important;
+}
+.cleanslate .ninjachat-chat .nc-online-form .form-border,
+.cleanslate .ninjachat-chat .nc-offline-form .form-border {
+  width: 93% !important;
+}
+.cleanslate .nc-online-form .primary-margin .btn-primary,
+.cleanslate .nc-offline-form .primary-margin .btn-primary {
+  border-radius: 4px !important;
+}
+.cleanslate .ninja-input-group .form-border {
+  border-top-right-radius: 0px !important;
+  border-bottom-right-radius: 0px !important;
 }
 .cleanslate .modal-prevent-closing {
   background: #fff !important;
-  box-shadow: 0px 0px 15px 2px #f1f1f1 !important;
+  box-shadow: 0px 0px 15px 2px #dae2fb61 !important;
   position: absolute !important;
   width: 86% !important;
-  top: 94px !important;
+  bottom: 140px !important;
+  border: 1px solid #dae2fb !important;
   border-radius: 4px !important;
   right: 25px !important;
   left: 25px !important;
 }
 .cleanslate .modal-prevent-closing .form-padding {
-  padding: 15px !important;
+  padding: 23px 19px 19px !important;
+}
+.cleanslate .email-send {
+  transform: rotate(42deg);
+  margin-left: -4px !important;
 }
 .cleanslate .ninjachat .border-bottom {
-  border-bottom: 1px solid #f1f1f1 !important;
-  padding: 12px !important;
+  padding: 15px 19px 0px !important;
 }
 .cleanslate .ninjachat .border-top {
-  border-top: 1px solid #f1f1f1 !important;
   display: flex;
   justify-content: end;
   padding: 15px 0px 0px 0px !important;
   background-color: #fff;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  margin-top: 10px !important;
+}
+.cleanslate .ninjachat-chat .nc-online-form .form-border,
+.cleanslate .ninjachat-chat .nc-offline-form .form-border {
+  margin-bottom: 10px !important;
 }
 .cleanslate .modal-prevent-closing label {
   font-size: 13px !important;
 }
+.cleanslate .modal-prevent-closing #name-input {
+  margin-top: 3px !important;
+  margin-bottom: 2px !important;
+}
 .cleanslate .modal-prevent-closing .heading-font {
-  font-size: 14px !important;
-  font-weight: 500 !important;
+  font-size: 13px !important;
+  font-weight: 600 !important;
+  padding: 0px !important;
 }
 .cleanslate .modal-prevent-closing .modal-cross-icon {
-  width: 12px !important;
+  width: 10px !important;
   opacity: 0.5 !important;
   cursor: pointer !important;
   position: absolute !important;
-  right: 13px !important;
-  top: 18px !important;
+  right: 5px !important;
+  top: 5px !important;
+  background: #dae2fb;
+  padding: 5px !important;
+  border-radius: 50%;
 }
 .cleanslate .modal-prevent-closing .modal-cross-icon:hover {
   opacity: 0.75 !important;
+}
+.cleanslate .ninja-input-group {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  width: 100%;
+}
+.cleanslate .ninja-input-group-append {
+  margin-left: -1px;
+  display: flex;
 }
 .cleanslate .ninjachat-close-icon {
   width: 14px !important;
@@ -777,23 +803,35 @@ button {
   cursor: pointer !important;
   position: absolute;
   right: 22px !important;
-  top: 26px !important;
+  top: 24px !important;
   filter: invert(1);
 }
-.cleanslate .ninjachat .btn-secondary {
-  color: #ffffff;
-  background-color: #6e84a3;
-  border-color: #6e84a3;
+.cleanslate .ninjachat .btn-white {
+  color: #283e59;
+  background-color: #ffffff;
+  border-color: #e3ebf6 !important;
   padding: 6px 12px;
   border-radius: 4px;
   margin-right: 10px;
+  border: 1px solid;
+}
+.cleanslate .ninjachat .btn-white:hover {
+  background-color: #f9fbfd;
+  border-color: #d2ddec;
 }
 .cleanslate .ninjachat .btn-primary {
-  background-color: #2c7be5;
-  border-color: #2c7be5;
+  background-color: #1b17cf;
+  border-color: #1b17cf;
   color: #fff;
   padding: 8px 12px !important;
   border-radius: 4px;
+  border-bottom-left-radius: 4px !important;
+  border-top-left-radius: 4px !important;
+}
+.cleanslate .ninjachat .btn-primary:hover {
+  color: #ffffff;
+  background-color: #2421da;
+  border-color: #2421da;
 }
 .cleanslate .ql-snow .ql-tooltip {
   border: 1px solid #ccc !important;
@@ -802,7 +840,7 @@ button {
   border-radius: 4px;
 }
 .mobile-chat-widget.cleanslate .ninjachat .mobile-footer {
-  position: absolute;
+  position: fixed;
   bottom: 0px;
 }
 .mobile-chat-widget.cleanslate .ninjachat-footer-section .ql-editor {
@@ -822,9 +860,10 @@ button {
   padding-top: 1px !important;
 }
 .cleanslate .ql-files svg {
-  width: 22px !important;
-  height: 22px !important;
+  width: 20px !important;
+  height: 20px !important;
   margin-left: -3px;
+  margin-top: -2px;
 }
 .cleanslate .ql-files svg:hover path {
   fill: #1976d3 !important;
@@ -934,6 +973,11 @@ button {
   font-size: 13px !important;
   margin: 0px 4px 0px 13px !important;
 }
+.cleanslate .ninjachat .ql-editor .ptag .strong {
+  font-size: 13px !important;
+  margin: 0px 4px 0px 13px !important;
+  word-spacing: normal !important;
+}
 .cleanslate .ninjachat-chat .ninjachat-footer-500app {
   border-top: 1px solid #efeff1 !important;
 }
@@ -946,7 +990,7 @@ button {
 }
 .cleanslate .primary-margin {
   margin-top: 10px !important;
-  margin-bottom: 10px !important;
+  margin-bottom: 0px !important;
 }
 .cleanslate textarea {
   resize: none;
@@ -974,11 +1018,12 @@ button {
   color: #fff;
   border-radius: 4px !important;
 }
-.ninjachat-help-text {
-  padding: 5px 16px !important;
-  color: #005ffb !important;
+.cleanslate .ninjachat-help-text {
+  padding: 0px !important;
+  color: #1528b3 !important;
+  font-size: 12px !important;
 }
-.ninjachat-ultra .ninjachat-ultra-comment-section-replay .ninjachat-avatar-flex .align-self-end .name-gravatar {
+.cleanslate .ninjachat .ninjachat-avatar-flex .align-self-end .name-gravatar {
   display: flex;
   width: 30px;
   height: 30px;
@@ -991,20 +1036,94 @@ button {
   background-color: #1155cc;
   color: rgb(255 255 255);
 }
+.cleanslate .ninjachat-mail-option .transcript-bg {
+  position: absolute;
+  top: 20px;
+  z-index: 2;
+  right: 77px;
+  width: 20px !important;
+  height: 20px !important;
+}
+.cleanslate .ql-bold:hover,
+.cleanslate .ql-italic:hover,
+.cleanslate .ql-underline:hover,
+.cleanslate .ql-files:hover,
+.cleanslate .ql-strike:hover,
+.cleanslate .ql-link:hover,
+.cleanslate .ql-list:hover {
+  background: #1915e70f !important;
+  border-radius: 50% !important;
+  width: 24px !important;
+  height: 24px !important;
+  padding: 4px 4px !important;
+}
+.cleanslate .ql-snow.ql-toolbar button,
+.cleanslate .ql-snow .ql-toolbar button {
+  padding: 4px 4px !important;
+}
+.cleanslate .ninjachat-mail-option .transcript-img {
+  width: 19px;
+  filter: grayscale(100) brightness(5.8);
+  margin-left: -4px !important;
+}
+.cleanslate .ninjachat-mail-option .transcript-img:hover {
+  filter: grayscale(100) brightness(7) !important;
+}
+/* Tooltip css */
+.ninjachat-option .tooltip {
+  max-width: 200px;
+  padding: 0.25rem 0.5rem !important;
+  color: #12263f;
+  text-align: center;
+  background-color: #e3ebf6;
+  border-radius: 0.375rem;
+  top: -15px;
+  font-size: 11px;
+  display: block;
+  right: 40px;
+  margin-bottom: 15px;
+  opacity: 0;
+  pointer-events: none;
+  position: absolute;
+  width: fit-content;
+  transform: translateY(10px);
+  transition: all 0.25s ease-out;
+  box-shadow: 2px 2px 6px rgba(206, 206, 206, 0.28);
+}
+.ninjachat-option .tooltip:before {
+  bottom: -20px;
+  content: " ";
+  display: block;
+  height: 20px;
+  left: 0;
+  position: absolute;
+  width: 100%;
+}
+.ninjachat-option .tooltip:after {
+  border-left: solid transparent 8px;
+  border-right: solid transparent 8px;
+  border-top: solid #e3ebf6 8px;
+  bottom: -8px;
+  content: " ";
+  height: 0;
+  left: 50%;
+  margin-left: -13px;
+  position: absolute;
+  width: 0;
+}
+.ninjachat-option:hover .tooltip {
+  opacity: 1;
+  pointer-events: auto;
+  transform: translateY(0px);
+}
 
-.cleanslate .ninjachat-mail-option {
-  background: #f7f7fb !important;
-  display: inline-block !important;
-  width: 100% !important;
-  border-bottom: 0.5px solid #e9e9f1 !important;
-  padding: 5px 0px !important;
+.cleanslate .validation {
+  text-align: center;
 }
-.cleanslate .ninjachat-option {
-  text-align: right;
+
+.cleanslate .validation .valid-text {
+  color: red !important;
   margin-right: 10px !important;
-  font-size: 11px !important;
-  color: #1155cc !important;
-}
-.cleanslate .ninjachat-option:hover {
-  color: #005ffb !important;
+  display: block;
+  padding-top: 4px !important;
 }
