--- a/cleanslate1.css
+++ b/cleanslate1.css
@@ -14,7 +14,7 @@
 */ /* == BLANKET RESET RULES == */
 
 /* HTML 4.01 */
-.cleanslate, .cleanslate h1, .cleanslate h2, .cleanslate h3, .cleanslate h4, .cleanslate h5, .cleanslate h6, .cleanslate p, .cleanslate iframe, .cleanslate strong, .cleanslate legend, .cleanslate em, .cleanslate summary, .cleanslate cite,
+.cleanslate, .cleanslate h1, .cleanslate h2, .cleanslate h3, .cleanslate h4, .cleanslate h5, .cleanslate h6, .cleanslate p, .cleanslate iframe, .cleanslate legend, .cleanslate em, .cleanslate summary, .cleanslate cite,
 .cleanslate hr,
 
 /* HTML5 - Sept 2013 taken from MDN https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5/HTML5_element_list */
@@ -70,6 +70,7 @@
   visibility: inherit !important;
   width: auto !important;
   word-spacing: normal !important;
+  white-space: pre-wrap !important;
   z-index: auto !important;
 
   /* CSS3 */
